# temple-cat

./: .env.example  .gitignore  DEPLOY.md  docker-compose.yml  interview-project-details.md  sonar-project.properties
.github/workflows/: sonar.yml
backend/: Dockerfile  README.md  bot.py  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: sessions.py
backend/app/data/: help_center_seed.json
backend/app/models/: config.py
backend/app/services/: diarization.py  diarization_processor.py  freya_tts.py  help_center_rag_processor.py  interruptibility.py  nvidia_diarization.py  openai_embeddings.py  openai_key_env.py  pipecat_tracing.py  pipeline.py  qdrant_http.py  rag_env.py  rag_processor.py  rate_limit.py  request_identity.py  retries.py  retrieval_runtime.py  retrieval_seed.py  speechmatics_diarization.py
backend/temple_cat_voice_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_bot_pipeline_assembly.py  test_bot_pipeline_unit.py  test_config_schema.py  test_cors_origins.py  test_diarization.py  test_interruptibility.py  test_metrics.py  test_openai_key_env.py  test_pipecat_tracing.py  test_pipeline_state_transitions.py  test_rag_prompt_injection.py  test_rate_limit.py  test_retries.py  test_retrieval.py  test_retrieval_seed.py  test_sessions_api.py  test_validate_config_endpoint.py
demo/: WALKTHROUGH.md
docs/superpowers/plans/: 2026-05-01-qdrant-rag-implementation.md  2026-05-01-voice-ai-interview-project-implementation.md  2026-05-01-voice-ui-shadcn-implementation.md
docs/superpowers/specs/: 2026-05-01-qdrant-rag-design.md  2026-05-01-voice-ai-interview-project-design.md  2026-05-01-voice-ui-shadcn-design.md
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/: test-setup.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/__tests__/: page.test.tsx
frontend/src/components/app/: AppHeader.tsx  AppShell.tsx  PageContainer.tsx
frontend/src/components/app/__tests__/: AppShell.test.tsx
frontend/src/components/ui/: sidebar.tsx  textarea.tsx
frontend/src/features/dashboard/: BotStateBadge.tsx  LatencyPanel.tsx  SpeakerBadge.tsx  SpeakerIndicator.tsx  TranscriptPanel.tsx  speakerTranscript.ts  voiceBotState.ts
frontend/src/features/dashboard/__tests__/: Dashboard.test.tsx  speakerTranscript.test.ts  voiceBotState.test.ts
frontend/src/features/session-config/: SessionConfigForm.tsx  sessionConfig.ts
frontend/src/features/session-config/__tests__/: SessionConfigForm.test.tsx
frontend/src/features/session-control/: SessionControlPanel.tsx
frontend/src/hooks/: useVoiceSession.ts
frontend/src/lib/: query-keys.ts
frontend/src/lib/api/: http.ts  sessions.ts
frontend/src/providers/: query-provider.tsx
(+3 files in other folders)
