[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temple-cat-voice-backend"
version = "0.0.0"
description = "Voice AI backend"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.4",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    # Pinned to match backend/requirements-docker.lock (voice pipeline is sensitive to upstream drift).
    "pipecat-ai[daily,deepgram,openai,cartesia,silero,tracing]==1.1.0",
    # Pipecat's tracing extra does not ship OTLP exporters; Jaeger needs gRPC export.
    "opentelemetry-exporter-otlp-proto-grpc>=1.33.0,<2",
    "aiohttp>=3.9",
    "aiofiles>=24.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
